pause dulu mau ke mcd

--- a/Final Project PBO-1/Final Project PBO-1.csproj
+++ b/Final Project PBO-1/Final Project PBO-1.csproj
@@ -122,6 +122,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="imgtetiren.png" />
+    <None Include="Resources\minus %281%29.png" />
+    <None Include="Resources\cross %281%29.png" />
+    <None Include="Resources\square %281%29.png" />
+    <None Include="Resources\square.png" />
+    <None Include="Resources\cross.png" />
+    <None Include="Resources\asdasdasd1%402x1.png" />
+    <None Include="Resources\asdasdasd1%402x.png" />
     <None Include="Resources\exit %281%29.png" />
     <None Include="Resources\exit.png" />
     <None Include="Resources\bars-progress.png" />
