--- a/Final Project PBO-1/Final Project PBO-1.csproj
+++ b/Final Project PBO-1/Final Project PBO-1.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataUser.cs" />
+    <Compile Include="DataUserRepos.cs" />
     <Compile Include="FirstPage.cs">
       <SubType>Form</SubType>
     </Compile>
