--- a/Final Project PBO-1/packages.config
+++ b/Final Project PBO-1/packages.config
@@ -1,82 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Avalonia" version="0.10.18" targetFramework="net48" />
-  <package id="Avalonia.ReactiveUI" version="0.10.18" targetFramework="net48" />
-  <package id="Avalonia.Remote.Protocol" version="0.10.18" targetFramework="net48" />
-  <package id="DynamicData" version="7.12.8" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
-  <package id="FlaUI.Core" version="4.0.0" targetFramework="net48" />
-  <package id="JetBrains.Annotations" version="2022.1.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.CommandLine" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="6.0.1" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.UserSecrets" version="6.0.1" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.FileProviders.Composite" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.FileProviders.Embedded" version="6.0.5" targetFramework="net48" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Localization" version="6.0.5" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Localization.Abstractions" version="6.0.5" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net48" />
-  <package id="Nito.AsyncEx.Context" version="5.1.2" targetFramework="net48" />
-  <package id="Nito.AsyncEx.Coordination" version="5.1.2" targetFramework="net48" />
-  <package id="Nito.AsyncEx.Tasks" version="5.1.2" targetFramework="net48" />
-  <package id="Nito.Collections.Deque" version="1.1.1" targetFramework="net48" />
-  <package id="Nito.Disposables" version="2.2.1" targetFramework="net48" />
-  <package id="ReactiveUI" version="18.4.1" targetFramework="net48" />
-  <package id="Splat" version="14.5.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
+  <package id="RestSharp" version="108.0.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
-  <package id="System.IO" version="4.3.0" targetFramework="net48" />
-  <package id="System.Linq.Dynamic.Core" version="1.2.18" targetFramework="net48" />
-  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net48" />
   <package id="System.Management" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Reactive" version="5.0.0" targetFramework="net48" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net48" />
-  <package id="System.Runtime.Loader" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
-  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="5.0.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
-  <package id="Uno.Diagnostics.Eventing" version="2.0.1" targetFramework="net48" />
-  <package id="Uno.Foundation.Logging" version="4.6.19" targetFramework="net48" />
-  <package id="Uno.SourceGenerationTasks" version="4.2.0" targetFramework="net48" />
-  <package id="Uno.UI" version="4.6.19" targetFramework="net48" />
-  <package id="Volo.Abp.Core" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.Data" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.EventBus.Abstractions" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.ExceptionHandling" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.Localization" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.Localization.Abstractions" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.MultiTenancy" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.ObjectExtending" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.Security" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.Settings" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.UI" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.Uow" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.Validation.Abstractions" version="6.0.2" targetFramework="net48" />
-  <package id="Volo.Abp.VirtualFileSystem" version="6.0.2" targetFramework="net48" />
 </packages>
