--- a/Final Project PBO-1/Final Project PBO-1.csproj
+++ b/Final Project PBO-1/Final Project PBO-1.csproj
@@ -203,6 +203,12 @@
     <Compile Include="CheckOut.Designer.cs">
       <DependentUpon>CheckOut.cs</DependentUpon>
     </Compile>
+    <Compile Include="CheckOutMenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CheckOutMenu.Designer.cs">
+      <DependentUpon>CheckOutMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="COPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -220,6 +226,12 @@
     </Compile>
     <Compile Include="HistoryList.Designer.cs">
       <DependentUpon>HistoryList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HistoryMenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HistoryMenu.Designer.cs">
+      <DependentUpon>HistoryMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="HistoryPage.cs">
       <SubType>Form</SubType>
@@ -245,6 +257,12 @@
     <Compile Include="LoginPage.Designer.cs">
       <DependentUpon>LoginPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignUpPage.cs">
@@ -259,6 +277,9 @@
     <EmbeddedResource Include="CheckOut.resx">
       <DependentUpon>CheckOut.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CheckOutMenu.resx">
+      <DependentUpon>CheckOutMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="COPage.resx">
       <DependentUpon>COPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -267,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HistoryList.resx">
       <DependentUpon>HistoryList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HistoryMenu.resx">
+      <DependentUpon>HistoryMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HistoryPage.resx">
       <DependentUpon>HistoryPage.cs</DependentUpon>
@@ -279,6 +303,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoginPage.resx">
       <DependentUpon>LoginPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
