--- a/Final Project PBO-1/Final Project PBO-1.csproj
+++ b/Final Project PBO-1/Final Project PBO-1.csproj
@@ -245,6 +245,9 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SendProduct.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="ProductController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignUpPage.cs">
