--- a/Final Project PBO-1/Final Project PBO-1.csproj
+++ b/Final Project PBO-1/Final Project PBO-1.csproj
@@ -191,22 +191,22 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoxList.cs">
+    <Compile Include="Controls\BoxList.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="BoxList.Designer.cs">
+    <Compile Include="Controls\BoxList.Designer.cs">
       <DependentUpon>BoxList.cs</DependentUpon>
     </Compile>
-    <Compile Include="CheckOut.cs">
+    <Compile Include="Controls\CheckOut.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CheckOut.Designer.cs">
+    <Compile Include="Controls\CheckOut.Designer.cs">
       <DependentUpon>CheckOut.cs</DependentUpon>
     </Compile>
-    <Compile Include="CheckOutMenu.cs">
+    <Compile Include="Menu\CheckOutMenu.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CheckOutMenu.Designer.cs">
+    <Compile Include="Menu\CheckOutMenu.Designer.cs">
       <DependentUpon>CheckOutMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="FirstPage.cs">
@@ -215,22 +215,22 @@
     <Compile Include="FirstPage.Designer.cs">
       <DependentUpon>FirstPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="HistoryList.cs">
+    <Compile Include="Controls\HistoryList.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HistoryList.Designer.cs">
+    <Compile Include="Controls\HistoryList.Designer.cs">
       <DependentUpon>HistoryList.cs</DependentUpon>
     </Compile>
-    <Compile Include="HistoryMenu.cs">
+    <Compile Include="Menu\HistoryMenu.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HistoryMenu.Designer.cs">
+    <Compile Include="Menu\HistoryMenu.Designer.cs">
       <DependentUpon>HistoryMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="HomeMenu.cs">
+    <Compile Include="Menu\HomeMenu.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HomeMenu.Designer.cs">
+    <Compile Include="Menu\HomeMenu.Designer.cs">
       <DependentUpon>HomeMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="LoginPage.cs">
@@ -245,36 +245,38 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="SendProduct.cs" />
-    <Compile Include="Product.cs" />
-    <Compile Include="ProductController.cs" />
+    <Compile Include="Model\ProductHistory.cs" />
+    <Compile Include="Model\SendProduct.cs" />
+    <Compile Include="Model\Product.cs" />
+    <Compile Include="Controller\ProductController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\SendProductHistory.cs" />
     <Compile Include="SignUpPage.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SignUpPage.Designer.cs">
       <DependentUpon>SignUpPage.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="BoxList.resx">
+    <EmbeddedResource Include="Controls\BoxList.resx">
       <DependentUpon>BoxList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CheckOut.resx">
+    <EmbeddedResource Include="Controls\CheckOut.resx">
       <DependentUpon>CheckOut.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CheckOutMenu.resx">
+    <EmbeddedResource Include="Menu\CheckOutMenu.resx">
       <DependentUpon>CheckOutMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FirstPage.resx">
       <DependentUpon>FirstPage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HistoryList.resx">
+    <EmbeddedResource Include="Controls\HistoryList.resx">
       <DependentUpon>HistoryList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HistoryMenu.resx">
+    <EmbeddedResource Include="Menu\HistoryMenu.resx">
       <DependentUpon>HistoryMenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HomeMenu.resx">
+    <EmbeddedResource Include="Menu\HomeMenu.resx">
       <DependentUpon>HomeMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginPage.resx">
