gak tau ini sampe mana

--- a/Final Project PBO-1/Final Project PBO-1.csproj
+++ b/Final Project PBO-1/Final Project PBO-1.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controls\BoxList.Designer.cs">
       <DependentUpon>BoxList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Cart.cs" />
     <Compile Include="Controls\CheckOut.cs">
       <SubType>UserControl</SubType>
     </Compile>
